# deta-keepalive

./: README.md  pyproject.toml  setup.cfg
deta_keepalive/: __init__.py  pinger.py
examples/telegrambot/: main.py  requirements.txt
